dark theme; style font fix; dynamic wrapping and width

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,21 @@
+* {background-color: #111111}
+
 h1 {
     font-size: 96px;
+    font-weight: 100;
+    text-transform: uppercase;
+    color: #fbfbfa;
 }
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+    font-weight: 100;
     /* max-width: 800px; */
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     padding: 10px;
     text-align: center;
+    text-transform: uppercase;
 }
 
 #output {
@@ -20,7 +27,11 @@ body {
     padding: 20px;
     margin-top: 20px;
     overflow: auto;
-    text-align: left;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;  
 }
 
 #fileInput {
@@ -28,19 +39,20 @@ body {
 }
 
 .btn {
-    background: #6c6c6c;
-    color: white;
+    background: none;
+    color: #fbfbfa;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     display: inline-block;
     margin: 10px;
     border: none;
-    font-size: 14px;
+    font-size: 28px;
+    text-transform: uppercase;
 }
 
 .btn:hover {
-    background: #6c6c6c;
+    background: none;
 }
 
 #preview {
@@ -55,7 +67,7 @@ body {
 }
 
 .supported-formats {
-    color: #666;
-    font-size: 0.9em;
+    color: #fbfbfa;
+    font-size: 2em;
     margin: 10px 0;
 }
